@@ -6,6 +6,7 @@ Release 4.0.0
      * Remove table stats monitoring, use pgstat instead
      * Remove index stats monitoring, use pgstat instead
      * Remove kill and renice command, and stop displaying nice priority
+     * Show backend state instead of operating system state
 
 Release 3.7.0
 
